cli/tests/snapshots/main__formatting@atx-heading-hash-signs.md.snap
---
source: cli/tests/main.rs
expression: file
input_file: cli/tests/files/markdown/atx-heading/atx-heading-hash-signs.md
---
|                                                                              | printWidth
----------------------------------start input-----------------------------------
# Programming languages

## C#

## JavaScript

-----------------------------------end input------------------------------------
|                                                                              | printWidth

