cli/tests/snapshots/main__formatting@atx-heading-long.md.snap
---
source: cli/tests/main.rs
expression: file
input_file: cli/tests/files/markdown/atx-heading/atx-heading-long.md
---
|                                                                              | printWidth
----------------------------------start input-----------------------------------
# this is a long long long long long long long long long long long long long long heading.

-----------------------------------end input------------------------------------
|                                                                              | printWidth

