cli/tests/snapshots/main__formatting@atx-heading-mixed.md.snap
---
source: cli/tests/main.rs
expression: file
input_file: cli/tests/files/markdown/atx-heading/atx-heading-mixed.md
---
|                                                                              | printWidth
----------------------------------start input-----------------------------------
## Example - An example heading (<a href="https://example.com">https://example.com</a>)

-----------------------------------end input------------------------------------
|                                                                              | printWidth

