cli/tests/snapshots/main__formatting@atx-heading-unbreakable.md.snap
---
source: cli/tests/main.rs
expression: file
input_file: cli/tests/files/markdown/atx-heading/atx-heading-unbreakable.md
---
|                                                                              | printWidth
----------------------------------start input-----------------------------------
### `reporters` [array<moduleName | [moduleName, options]>]

-----------------------------------end input------------------------------------
|                                                                              | printWidth

