cli/tests/snapshots/main__formatting@extra-blank-lines-ending.md.snap
---
source: cli/tests/main.rs
expression: file
input_file: cli/tests/files/markdown/integration/extra-blank-lines-ending.md
---
|                                                                              | printWidth
----------------------------------start input-----------------------------------
There are way too many blank lines at the end of this document.

-----------------------------------end input------------------------------------
|                                                                              | printWidth

