cli/tests/snapshots/main__formatting@fenced-code-1.md.snap
---
source: cli/tests/main.rs
expression: file
input_file: cli/tests/files/markdown/fenced-code/fenced-code-1.md
---
|                                                                              | printWidth
----------------------------------start input-----------------------------------
```
<
 >
```

-----------------------------------end input------------------------------------
|                                                                              | printWidth

